--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,39 @@
-<p>login works!</p>
+<mat-card>
+  <mat-card-title>Login</mat-card-title>
+  <mat-card-content>
+    <form >
+      <div>
+        <div>
+          <mat-form-field>
+            <input
+              type="text"
+              matInput
+              placeholder="Username"
+              required
+            />
+            <mat-error>
+              Please provide a valid email address
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <input
+              type="text"
+              matInput
+              placeholder="Password"
+              required
+            />
+            <mat-error>
+              Please provide a valid email address
+            </mat-error>
+          </mat-form-field>
+
+        </div>
+      </div>
+
+      <a routerLink="../register" mat-raised-button href="https://www.google.com/">register</a>
+
+    </form>
+  </mat-card-content>
+</mat-card>
