--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,21 +1,92 @@
 <mat-card>
   <mat-card-title>Register</mat-card-title>
   <mat-card-content>
-    <form >
-      <p>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <div>
+        <mat-form-field>
+          <input
+            type="text"
+            matInput
+            placeholder="First Name"
+            required
+            formControlName="firstname"
+          />
+          <mat-error>
+            Please provide a valid email address
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input
+            type="text"
+            matInput
+            placeholder="Last Name"
+            required
+            formControlName="lastname"
+          />
+          <mat-error>
+            Please provide a valid email address
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input
+            type="text"
+            matInput
+            placeholder="Email"
+            required
+            formControlName="email"
+          />
+          <mat-error>
+            Please provide a valid email address
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div>
         <mat-form-field>
           <input
             type="text"
             matInput
             placeholder="Username"
             required
+            formControlName="username"
           />
           <mat-error>
             Please provide a valid email address
           </mat-error>
         </mat-form-field>
-      </p>
-      <a routerLink="../login" mat-raised-button href="https://www.google.com/">register</a>
+      </div>
+      <div>
+        <mat-form-field>
+          <input
+            type="text"
+            matInput
+            placeholder="Password"
+            required
+            formControlName="password"
+          />
+          <mat-error>
+            Please provide a valid email address
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <input
+            type="text"
+            matInput
+            placeholder="Confirm password"
+            required
+            formControlName="confirmpassword"
+          />
+          <mat-error>
+            Please provide a valid email address
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <button  mat-raised-button>Register</button>
     </form>
   </mat-card-content>
 </mat-card>
