Added http service and interfaces

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -33,11 +33,12 @@
       <div>
         <mat-form-field>
           <input
-            type="text"
+            type="email"
             matInput
             placeholder="Email"
             required
             formControlName="email"
+            email
           />
           <mat-error>
             Please provide a valid email address
