Added Login form functionality

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -102,6 +102,7 @@
         </mat-form-field>
       </div>
       <button style="margin-top: 20px;" mat-raised-button>Register</button>
+      <button style="margin-top: 20px; margin-left: 20px" mat-raised-button routerLink="../login">Login</button>
     </form>
   </mat-card-content>
 </mat-card>
