--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-title>Login</mat-card-title>
   <mat-card-content>
-    <form >
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div>
         <div>
           <mat-form-field>
@@ -10,9 +10,10 @@
               matInput
               placeholder="Username"
               required
+              formControlName="username"
             />
             <mat-error>
-              Please provide a valid email address
+              Please provide a valid Username
             </mat-error>
           </mat-form-field>
         </div>
@@ -23,16 +24,18 @@
               matInput
               placeholder="Password"
               required
+              formControlName="password"
             />
             <mat-error>
-              Please provide a valid email address
+              Please provide a valid Password
             </mat-error>
           </mat-form-field>
 
         </div>
       </div>
 
-      <a routerLink="../register" mat-raised-button href="https://www.google.com/">register</a>
+      <button style="margin-top: 20px;" mat-raised-button routerLink="../register">Register</button>
+      <button style="margin-top: 20px; margin-left: 20px" mat-raised-button>Login</button>
 
     </form>
   </mat-card-content>
