--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,21 +6,21 @@
         <div>
           <mat-form-field>
             <input
-              type="text"
+              type="email"
               matInput
-              placeholder="Username"
+              placeholder="Email"
               required
-              formControlName="username"
+              formControlName="email"
             />
             <mat-error>
-              Please provide a valid Username
+              Please provide a valid Email
             </mat-error>
           </mat-form-field>
         </div>
         <div>
           <mat-form-field>
             <input
-              type="text"
+              type="password"
               matInput
               placeholder="Password"
               required
