--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<h1>
+  Best Debt Consolidation Loans
+</h1>
+
+<section>
+  <div class="card-item" *ngFor="let item of [1,2,3,4,5]">
+    <app-card></app-card>
+  </div>
+</section>
