--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,10 @@
 <h1>
-  Best Debt Consolidation Loans
+  Best Debt Consolidation Loans {{isOpenSuccessModal}}
 </h1>
 
 <section>
   <div class="card-item" *ngFor="let item of [1,2,3,4,5]">
-    <app-card></app-card>
+    <app-card (applyed)="applay()"></app-card>
   </div>
 </section>
+<!-- <app-success ></app-success>-->
