Added login and registr functionality by json file.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
         <div>
           <mat-form-field>
             <input
-              type="password"
+              type="text"
               matInput
               placeholder="Password"
               required
