--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -48,12 +48,11 @@
       <div>
         <mat-form-field>
           <input
-            type="email"
+            type="text"
             matInput
             placeholder="Phone"
             required
             formControlName="phone"
-            email
           />
           <mat-error>
             Please provide a valid Phone number
