--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p>not-found works!</p>
+<div style="justify-content: center;
+    display: grid;
+    margin-top: 10%;">
+  <h1>404 Error</h1>
+  <h1>Page Not Found</h1>
+</div>
