--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,5 +1,6 @@
 .example-card {
-  margin-bottom: 8px;
+  margin-bottom: 28px;
+  height: 280px;
   .sections {
     display: flex;
     justify-content: space-between;
@@ -26,7 +27,8 @@
     align-items: center;
     img {
       width: 100%;
-      height: 150px;
+      height: 100%;
+      //height: 150px;
     }
     h2 {
       text-align: center;
