--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
         <div>
           <mat-form-field>
             <input
-              type="text"
+              type="password"
               matInput
               placeholder="Password"
               required
